                    - _populate_buttons_config_for_*()
                    - _create_header_filter_for_line()
                    - _populate_header_filters_for_*()
               - The module 'views.convert' has been renamed "conversion".
            * Commercial :
                - The methods 'populate.Populator._populate_header_filters_for_*()' have been removed.

    Internal breaking changes :
    ---------------------------
    (they should not cause problem if you have not deeply modified the source code of Creme)

        # In the class 'creme_core.gui.button_menu.ButtonRegistry', the methods
          'get_buttons()' & 'mandatory_buttons()' get keywords arguments only now,
          an get a new mandatory argument "request".
        # The method 'creme_core.bricks.ButtonsBrick._get_buttons()' get a new mandatory argument "request".


== Version 2.7 ==

  UPGRADE NOTES :
    - If you upgrade your MariaDB server to 10.7+, you have to convert all the UUID fields
      (which were just CharFields before MariaDB 10.7) to real UUID fields
      See "creme/creme_core/migrations/migrate_uuid.sql" ; copy it & remove the
      lines related to app which are not installed) before importing it.

  Users side :
  ------------
    # The minimal version of Python is now '3.10'.
    # The version of Django has been upgraded to '5.2' ; for users it means that :
        - Python '3.13' is officially supported.
        - The minimal version of SQLite is now '3.31'.
        - The minimal version of MySQL is now '8.0.11'.
        - The minimal version of PostgreSQL is now '14'.
        - The minimal version of MariaDB is now '10.5' ;
          the UUID fields may have to be manually converted if you use MariaDB 10.7+ (see the upgrade notes above).
        - The URL fields assume "https" by default ; set the setting 'FORMS_URLFIELD_ASSUME_HTTPS' if you prefer "http"
          (this setting will be removed with Django 6.0 -- & so Creme 2.9 or something like that).